@@ -1,6 +1,7 @@
 development
   A '<bin>' prefixed to a directory string will be replaced with the directory
     of the currently executing script (requires 'findbin' module).
+  Add more options to `newrequire` function.
   Raise error if dierctory contains '?' character (unescapable).
 
 0.1.1.20120407
